perf: Add database indexes, optimize Nginx config, and improve performance
- Add comprehensive database indexes for Product model (filters, sorting, main page)
- Enable PostgreSQL connection pooling (CONN_MAX_AGE=600s)
- Add django.contrib.postgres for full-text search support
- Optimize Nginx configuration:
  * Add microcaching (1s) for anonymous users
  * Enable gzip compression with optimal settings
  * Add keepalive connections to Gunicorn
  * Aggressive caching for static files (1 year)
  * Add health check endpoint
  * Optimize proxy buffering and timeouts
- Clean up requirements.txt (remove unused dependencies)
- Add psycogreen for gevent+PostgreSQL compatibility

--- a/nginx_auroom.conf
+++ b/nginx_auroom.conf
@@ -1,5 +1,9 @@
+# Кеш для микрокеширования динамических страниц
+proxy_cache_path /var/cache/nginx/auroom levels=1:2 keys_zone=auroom_cache:10m max_size=100m inactive=60m use_temp_path=off;
+
 upstream auroom_app {
     server 127.0.0.1:8000;
+    keepalive 32;  # Пул соединений с Gunicorn
 }
 
 server {
@@ -12,11 +16,27 @@ server {
     access_log /var/log/nginx/auroom-access.log;
     error_log /var/log/nginx/auroom-error.log;
 
-    # Static files
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_comp_level 5;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/javascript application/xml application/xml+rss application/json image/svg+xml;
+    gzip_proxied any;
+
+    # Static files - агрессивное кеширование
     location /static/ {
         alias /var/www/auroom/static/;
-        expires 30d;
+        expires 1y;
         add_header Cache-Control "public, immutable";
+        add_header Vary "Accept-Encoding";
+
+        # Предзагрузка шрифтов
+        location ~* \.(woff2?|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
+        }
     }
 
     # Media files
@@ -24,26 +44,86 @@ server {
         alias /var/www/auroom/media/;
         expires 30d;
         add_header Cache-Control "public";
+        add_header Vary "Accept-Encoding";
+
+        # Оптимизация для изображений
+        location ~* \.(jpg|jpeg|png|gif|webp|ico)$ {
+            expires 30d;
+            add_header Cache-Control "public";
+            # Lazy loading hint
+            add_header X-Content-Type-Options "nosniff";
+        }
+    }
+
+    # Favicon - кешируем надолго
+    location = /favicon.ico {
+        alias /var/www/auroom/static/favicon.ico;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # Robots.txt
+    location = /robots.txt {
+        alias /var/www/auroom/static/robots.txt;
+        expires 1d;
+        access_log off;
+    }
+
+    # Health check endpoint (для мониторинга)
+    location = /health/ {
+        access_log off;
+        return 200 "OK";
+        add_header Content-Type text/plain;
     }
 
     # Proxy to Gunicorn
     location / {
         proxy_pass http://auroom_app;
+        proxy_http_version 1.1;
+
+        # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
         proxy_redirect off;
 
         # Timeouts
-        proxy_connect_timeout 120s;
-        proxy_send_timeout 120s;
-        proxy_read_timeout 120s;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+
+        # Буферизация
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 16k;
+        proxy_busy_buffers_size 24k;
+
+        # Микрокеширование для анонимных пользователей (1 секунда)
+        # Защищает от thundering herd при высокой нагрузке
+        proxy_cache auroom_cache;
+        proxy_cache_valid 200 1s;
+        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+        proxy_cache_lock on;
+        proxy_cache_lock_timeout 5s;
+
+        # Не кешировать для авторизованных (есть sessionid cookie)
+        proxy_cache_bypass $cookie_sessionid;
+        proxy_no_cache $cookie_sessionid;
+
+        # Добавляем заголовок для отладки кеша
+        add_header X-Cache-Status $upstream_cache_status;
     }
 
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/javascript application/xml+rss application/json;
+    # WebSocket support (если понадобится)
+    location /ws/ {
+        proxy_pass http://auroom_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
